[gd_scene load_steps=4 format=3 uid="uid://byx6t8ewapqg1"]

[ext_resource type="Script" uid="uid://bxoacqqt7tauj" path="res://menus/title.gd" id="1_c33ia"]
[ext_resource type="Texture2D" uid="uid://gli4y8kdimw3" path="res://assets/background/title_bg.png" id="2_7kd0g"]
[ext_resource type="FontFile" uid="uid://db4p37abih74f" path="res://assets/fonts/Sigmar/Sigmar-Regular.ttf" id="2_vmgax"]

[node name="Title" type="Node2D"]
script = ExtResource("1_c33ia")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_7kd0g")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1151.0
offset_bottom = 644.0
color = Color(0.133333, 0.219608, 0.337255, 0.207843)

[node name="Label" type="Label" parent="."]
offset_left = 317.0
offset_top = 71.0
offset_right = 851.0
offset_bottom = 194.0
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_vmgax")
theme_override_font_sizes/font_size = 75
text = "Jason Drawn"

[node name="Play" type="Button" parent="."]
offset_left = 136.0
offset_top = 384.0
offset_right = 345.0
offset_bottom = 480.0
size_flags_horizontal = 3
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_vmgax")
theme_override_font_sizes/font_size = 30
text = "Play"

[node name="Settings" type="Button" parent="."]
offset_left = 370.0
offset_top = 383.0
offset_right = 579.0
offset_bottom = 479.0
size_flags_horizontal = 3
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_vmgax")
theme_override_font_sizes/font_size = 30
text = "Settings"

[node name="Credits" type="Button" parent="."]
offset_left = 601.0
offset_top = 384.0
offset_right = 810.0
offset_bottom = 480.0
size_flags_horizontal = 3
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_vmgax")
theme_override_font_sizes/font_size = 30
text = "Credits
"

[node name="Quit" type="Button" parent="."]
offset_left = 836.0
offset_top = 384.0
offset_right = 1045.0
offset_bottom = 480.0
size_flags_horizontal = 3
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_vmgax")
theme_override_font_sizes/font_size = 30
text = "Quit
"

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
